--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,15 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "discord.js": "^14.16.3",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "moment": "^2.30.1",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
+    "url": "^0.11.4"
   }
 }
